syntax = "proto3";

package common;

option go_package="github.com/Jim3Things/CloudChamber/pkg/protos/common";

// Describe the capabilities of a physical blade
// TODO: Do we need anything about host system software, or is this purely physical attributes?

message blade_capacity {
    float cores = 1;
    int64 memory_in_mb = 2;
    int64 disk_in_gb = 3;
    int64 network_bandwidth = 4;
    string arch = 5;

    // GPUs may not be present at all on a blade, so if they are
    // not, then these fields are missing.
    message gpu_details {
        int32 units = 1;
        string arch = 2;
        bool present = 3;
    }
    gpu_details gpus = 6;
}

message timestamp {
    int64 ticks = 1;
}